# rocJPEG

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  rocJPEG-setup.py
.github/: CODEOWNERS
.jenkins/: common.groovy
api/: rocjpeg.h
cmake/: FindLibdrm.cmake  FindLibva.cmake
docker/: README.md  rocJPEG-on-ubuntu20.dockerfile  rocJPEG-on-ubuntu22.dockerfile
docs/: .gitignore  index.md  index.rst
docs/doxygen/: Doxyfile
docs/how-to/: rocjpeg-decoding-a-jpeg-stream.rst  rocjpeg-retrieve-image-info.rst  using-rocjpeg.rst
docs/install/: install.rst  rocjpeg-prerequisites.rst
docs/reference/: rocjpeg-tested-configs.rst
docs/sphinx/: _toc.yml.in  requirements.txt
samples/: CMakeLists.txt  README.md  rocjpeg_samples_common.h  rocjpeg_samples_utils.h
samples/jpegDecode/: CMakeLists.txt  README.md  jpegdecode.cpp  test1.yuv
samples/jpegDecodeBatched/: README.md  jpegdecodebatched.cpp
samples/jpegDecodeMultiThreads/: CMakeLists.txt  jpegdecodemultithreads.cpp
samples/jpegDecodePerf/: CMakeLists.txt  README.md  jpegdecodeperf.cpp
samples/jpegDecodeThreads/: CMakeLists.txt  README.md  jpegdecodethreads.cpp
src/: commons.h  rocjpeg_api.cpp  rocjpeg_api_stream_handle.h  rocjpeg_commons.h  rocjpeg_decoder.cpp  rocjpeg_decoder.h  rocjpeg_handle.h  rocjpeg_hip_kernels.cpp  rocjpeg_hip_kernels.h  rocjpeg_parser.cpp  rocjpeg_parser.h  rocjpeg_vaapi_decoder.cpp  rocjpeg_vaapi_decoder.h  test1.yuv
src/amd_detail/: rocjpeg_api_dispatch_interface.cpp
test/: CMakeLists.txt
utils/: hip_kernel.cpp
